feat: added new endpoints, updated openapi specification
